and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [5.10.1] - 2023-11-02

### Added

- **Títulos** - O sistema de títulos lançou! Atualmente, apenas usuários que compraram um título no evento de Halloween devem possuir um título, que pode ser ativado em `/personalizar títulos`
- Novas badges de votos adicionadas! Agora existem badges de votos para: 50, 100, 200, 300, 400, 500 e 1000 votos!
- Os TOPs que mostravam dados de caças agora possuem um botão para acessar o ranking semanal.
- Novos GIFs para os comandos `/carinho`, `/raiva` e `/abraçar`

### Changed

- Todos os perfis foram alterados para mostrarem o título do usuário
- O comando `/perfil` ficou mais rápido para os temas que não mostram o uso de comandos!
- Os comandos `/8ball`, `/filosofia`, `/macetava` e `/astlolfo` ficaram bem mais rápidos!
- O texto que aparece no perfil de quando alguém não tem dados de comandos foi alterado
- O comando `/personalizar badges` está mostrando informações mais úteis.
- O multiplicador dos prêmios do jogo do bicho foram alterados.

## [5.10.0] - 2023-11-01

### Added

- **Sistema de Fazendinha.** O sistema de fazendinha finalmente chegou na Menhera! Plante suas sementes e venda as plantações para ganhar estrelinhas! Cuidado para não deixar as plantas aprodrecerem!
- _Novo comando_ `/fazendinha plantações`: Controle os campos de sua fazenda. Plante e colha suas plantações.
- _Novo comando_ `/fazendinha silo`: Veja o silo de sua fazenda, com informações como quantas sementes e plantas tu tem.
- _Novo comando_ `/estatísticas fazendeiro`: Veja as estatísticas das plantações de usuários.
- _Novo comando_ `/estatísticas poker`: Veja as estatísticas de partidas de Poker de usuários.
- _Novo comando_ `/top estatísticas impostos`: Veja os usuários que mais pagaram impostos para a Menhera.
- _Novo comando_ `/menhera atualizações`: Veja informações da última atualização da Menhera.