@@ -10,6 +10,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 ### Added
 
 - **Títulos** - O sistema de títulos lançou! Atualmente, apenas usuários que compraram um título no evento de Halloween devem possuir um título, que pode ser ativado em `/personalizar títulos`
+- _Novo Comando_ `personalizar títulos`
+- Novos temas de perfil: `Girassóis` e `Galeria`
+- Novo tema de fundo de carta: `Noturna`
 - Novas badges de votos adicionadas! Agora existem badges de votos para: 50, 100, 200, 300, 400, 500 e 1000 votos!
 - Os TOPs que mostravam dados de caças agora possuem um botão para acessar o ranking semanal.
 - Novos GIFs para os comandos `/carinho`, `/raiva` e `/abraçar`
